# mpc-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: AWSReadOnlyResLoader.cpp.F96F57107673C7B2.idx  AWSReadOnlyResLoader.hpp.D3C5FAA346B25A1A.idx  AwsKMS.cpp.00126D9B720986EA.idx  AwsKMS.hpp.872025ED7A54850E.idx  AzureKMS.cpp.5F2808E3A5AE4A6B.idx  AzureKMS.hpp.1177F169BCC22DDF.idx  AzureReadOnlyResLoader.cpp.E0B6394566AF7CCF.idx  AzureReadOnlyResLoader.hpp.BCBA96EC91BA3756.idx  BasicTypes.hpp.3F48829A59096B15.idx  CoordinatorHttpsServer.cpp.C39A556DF099FCC6.idx  CoordinatorHttpsServer.hpp.BFF0CC5BB6E34789.idx  CoordinatorServer.cpp.ACFACFCD5F698FDF.idx  CoordinatorServer.hpp.962CC6BAAD6F7F45.idx  EnvConfig.cpp.62DC84B8BA969149.idx  EnvConfig.cpp.AE5702EB14627F81.idx  EnvConfig.hpp.442E131B4B085F9E.idx  EnvConfig.hpp.C0F22C31F9CD1400.idx  EnvManager.cpp.34BB3E323CB6E997.idx  EnvManager.cpp.66359D9FD9A693F2.idx  EnvManager.hpp.940061075BAF4E1C.idx  EnvManager.hpp.FE560F6345641379.idx  GoogleKMS.cpp.F4C2801121629E08.idx  GoogleKMS.hpp.9F35013CB06CE3A1.idx  GoogleReadOnlyResLoader.cpp.C6F6B3C8A512C69D.idx  GoogleReadOnlyResLoader.hpp.FE31EC1039E3F951.idx  HttpParser.hpp.56059DFB2D67A135.idx  HttpsSession.cpp.1C6A033FC053848F.idx  HttpsSession.hpp.CCFDDDB5EC132DFA.idx  IBMReadOnlyResLoader.cpp.6A53A776D18C1067.idx  IBMReadOnlyResLoader.hpp.6AA22B6840A74E68.idx  IKeyManagementService.hpp.EC77AC688E37904D.idx  IReadOnlyResLoader.hpp.2F83C8FCCF833CC9.idx  IbmKMS.cpp.E60AE78925705FA7.idx  IbmKMS.hpp.27BCA1CAA4EF3E1A.idx  KMSException.hpp.0026DBD8B1036BFA.idx  KMSManager.cpp.666DC9B020AC1185.idx  KMSManager.hpp.7C6656FA8D9BBD49.idx  KernelFirewall.cpp.FBF49B02E4F0DD10.idx  KernelFirewall.hpp.336E9B8F42210096.idx  LocalKMS.cpp.40760DE546EA81D8.idx  (+57 more)
.kms/: ca-key.pem  coordinator-key.pem  node1-key.pem  node2-key.pem  node3-key.pem
certs/: .gitignore
certs/ca/local/: ca-cert.srl  ca-key.pem
certs/local/: ca-cert.pem  coordinator-cert.pem  node1-cert.pem  node2-cert.pem  node3-cert.pem
env/: .env.dev  .env.local
mpc-sdk/: BUILD.md  CMakeLists.txt  README.md
mpc-sdk/interface/: ICryptoProvider.h  IECDSASigner.h  IEdDSASigner.h  IKeyGenerator.h
mpc-sdk/providers/fireblocks/: FireblocksCryptoProvider.cpp  FireblocksCryptoProvider.h  FireblocksECDSASigner.cpp  FireblocksECDSASigner.h  FireblocksEdDSASigner.cpp  FireblocksEdDSASigner.h  FireblocksKeyGenerator.cpp  FireblocksKeyGenerator.h  FireblocksPersistency.cpp  FireblocksPersistency.h  FireblocksPlatformService.cpp  FireblocksPlatformService.h
mpc-sdk/scripts/: build_fireblocks.sh
mpc-sdk/tests/: fireblocks_keygen_test.cpp
scripts/: generate_certs.README.md  generate_certs.sh  generate_proto.sh  generate_proto_coordinator_node.sh  generate_proto_wallet_coordinator.sh
src/common/config/: ConfigManager.cpp  ConfigManager.hpp  EnvConfig.cpp  EnvConfig.hpp  EnvManager.cpp  EnvManager.hpp
src/common/env/: EnvConfig.cpp  EnvConfig.hpp  EnvManager.cpp  EnvManager.hpp
src/common/https/: HTTPS_SETUP.md  README_HTTPS.md
src/common/https/include/: HttpWriter.hpp  HttpsClient.hpp  HttpsConnectionPool.hpp
src/common/https/src/: HttpWriter.cpp  HttpsClient.cpp  HttpsConnectionPool.cpp
src/common/kms/include/: AwsKMS.hpp  AzureKMS.hpp  GoogleKMS.hpp  IKeyManagementService.hpp  IbmKMS.hpp  KMSException.hpp  KMSFactory.hpp  KMSManager.hpp  LocalKMS.hpp
src/common/kms/src/: AwsKMS.cpp  AzureKMS.cpp  GoogleKMS.cpp  IbmKMS.cpp  KMSFactory.cpp  KMSManager.cpp  LocalKMS.cpp
src/common/network/framing/: http.hpp  tcp.hpp
src/common/network/https/: README_HTTPS.md
src/common/resource/include/: AWSReadOnlyResLoader.hpp  GoogleReadOnlyResLoader.hpp  IReadOnlyResLoader.hpp  ReadOnlyResLoaderManager.hpp
src/common/resource/src/: AWSReadOnlyResLoader.cpp  AzureReadOnlyResLoader.cpp  GoogleReadOnlyResLoader.cpp  IBMReadOnlyResLoader.cpp  LocalReadOnlyResLoader.cpp  ReadOnlyResLoaderManager.cpp
src/common/storage/include/: AzureReadOnlyResLoader.hpp  IBMReadOnlyResLoader.hpp  LocalReadOnlyResLoader.hpp
src/common/storage/src/: AWSReadOnlyResLoader.cpp  AzureReadOnlyResLoader.cpp  GoogleReadOnlyResLoader.cpp  IBMReadOnlyResLoader.cpp  LocalReadOnlyResLoader.cpp  ReadOnlyResLoaderManager.cpp
src/common/types/: BasicTypes.hpp  NodePlatformType.cpp  NodePlatformType.hpp
src/common/utils/: SocketUtils.cpp  SocketUtils.hpp
src/common/utils/firewall/: KernelFirewall.cpp  KernelFirewall.hpp
src/common/utils/logger/: Logger.hpp
src/common/utils/queue/: ThreadSafeQueue.hpp
src/common/utils/socket/: SocketUtils.cpp  SocketUtils.hpp
src/common/utils/threading/: ThreadPool.hpp  ThreadUtils.hpp
src/coordinator/: CoordinatorServer.cpp  CoordinatorServer.hpp  main.cpp
src/node/: NodeServer.cpp  NodeServer.hpp  main.cpp
src/node/handlers/include/: NodeMessageRouter.hpp  NodeProtocolRouter.hpp  NodeSigningHandler.hpp
src/node/handlers/src/: NodeMessageRouter.cpp  NodeProtocolRouter.cpp  NodeSigningHandler.cpp  NodeSigningProtocol.cpp
src/node/network/include/: NodeConnectionInfo.hpp  NodeTcpServer.hpp
src/node/network/src/: NodeConnectionInfo.cpp  NodeTcpServer.cpp
src/proto/coordinator_node/: common.proto  message.proto  signing.proto
src/proto/wallet_coordinator/: wallet_common.proto  wallet_message.proto  wallet_signing.proto
src/types/: BasicTypes.hpp  MessageTypes.hpp  WalletMessageType.cpp  WalletMessageType.hpp
tests/: CMakeLists.txt
tests/integration/: coordinator_node_basic_test.cpp  message_validation_test.cpp  node_tcp_server_test.cpp  test_coordinator_node_tls.cpp  test_mpc_engine_full.cpp  test_wallet_coordinator_node_integration.cpp  test_wallet_coordinator_node_integration.md
tests/load/: LOAD_TEST_GUIDE.md  generate_proto_go.sh  go.mod  load_client.go  run_load_tests.sh
tests/manual/: coordinator_with_real_nodes_test.cpp
tests/manual/scripts/: run_test_with_nodes.sh
tests/unit/: local_kms_test.cpp  socket_io_test.cpp  threadpool_test.cpp  threadsafe_queue_test.cpp
tests/unit/https/: test_https_library.cpp
tests/unit/wallet/: test_wallet_components.cpp
(+51 files in other folders)
